<resources>
<string name="app_name">Taxi App Rider</string>
<string name="title_activity_main2">Main2Activity</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">Android Studio</string>
<string name="nav_header_subtitle">android.studio@android.com</string>
<string name="nav_header_desc">Navigation header</string>
<string name="action_settings">Settings</string>
<string name="noti_channel_default">Primary Channel</string>
<string name="noti_channel_second">Secondary Channel</string>
<string name="loginother">Login To other Device Detected !</string>
<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="nodriver">No Driver Available in Your Area Please Try After Some Time.</string>

<string name="google_maps_api_key">AIzaSyDUly0o7nRCYqMQ43CCHZix2DsFJPu-PcI</string>
<string name="auto">Please auto start application to get updated.</string>

<string name="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>

<string name="error_password">Please Enter Password</string>
<string name="error_password_length">Please Enter Password Atleast 6 Character</string>
<string name="error_confirm_password">Please Enter Confirm Password</string>
<string name="error_password_match">Password doesn\t match</string>
<string name="Loding">Loading Please Wait...</string>
<string name="otp_message">OTP sent Successfully</string>
<string name="location_not_found">Location Not Found Please Try Again</string>
<string name="otp_verify">Please Check OTP</string>
<string name="reset_password">Password Reset Successfully</string>
<string name="error_response">Error in Response</string>
<string name="location_enable">Location is Disable Please Enable The Location</string>
<string name="choose_car_type">Please Choose Car Type</string>
<string name="please_select_driver">Please Select Driver</string>
<string name="select_payment_type">Please Select Payment Type</string>
<string name="request_send_driver">Request Sent Successfully To Driver</string>
<string name="enter_mobile_number">Please Enter Mobile Number</string>
<string name="enter_mobile_8_charcters">Enter Mobile Number Atleast 8 character</string>
<string name="enter_otp">Please Enter OTP</string>
<string name="enter_firstname">Please Enter First Name</string>
<string name="enter_lastname">Please Enter Last Name</string>
<string name="enter_email">Please Enter Email Address</string>
<string name="enter_valid_email">Enter Valid Email Address</string>
<string name="select_reason">Please Select Reason</string>
<string name="email_already_register">This Email Address is Already Registered !</string>
<string name="mobile_already_register">This Mobile is Already Registered ! </string>
<string name="enter_comment">Please Enter Comment</string>
<string name="update_app">Please update App</string>
<string name="driver_accept_trip">Driver has accepted Your Trip Request !</string>
<string name="trip_started">Trip Started !</string>
<string name="trip_end">Trip End !</string>
<string name="enter_old_password">Please Enter Old Password</string>
<string name="invalid_old_password">Invalid Old Password</string>
<string name="enter_new_password">Please Enter New Password</string>
<string name="favourite_location">Favourite Location</string>
<string name="no_favourite_location">No Favourite Location Found</string>
<string name="enter_your_mobile">Enter Your Mobile</string>
 <string name="write_message">Type here</string>
 <string name="forgot_password">Forgot Password</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="next">NEXT</string>
    <string name="resend_otp_code">Resend OTP Code?</string>
    <string name="current_trip">Current Trip</string>
    <string name="share_location">Share Location</string>
    <string name="sos_number">SOS Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="new_registration">New Registration</string>
    <string name="Forgot_password">Forgot Passoword ?</string>
    <string name="skip">Skip</string>
    <string name="enter_password">Enter Password</string>
    <string name="Enter">ENTER</string>
    <string name="Choose_Destination">Choose Destination</string>
    <string name="Registration">Registration</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="enter_character">Enter 6-8 Character Password</string>
    <string name="Email_Id">Email Id (Optional)</string>
    <string name="Submit">SUBMIT</string>
    <string name="write_us">Enter Comments</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Accepted">Accepted</string>
    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="Select_Image">Select Image</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="Sort_By_Price">Sort By Price</string>
    <string name="Sort_By_Rating">Sort By Rating</string>
    <string name="Driver">Driver</string>
    <string name="Car_Model">Car Model</string>
    <string name="Total_ETA">Total ETA</string>
   <string name="Fare">Fare</string>
   <string name="Start_Trip">Start Trip</string>
   <string name="From">From</string>
   <string name="To">To</string>
   <string name="KMS">KMS</string>
   <string name="ETA">ETA</string>
   <string name="Coupon_Code">Coupon  Code</string>
   <string name="Chat_Meassage">Chat Meassage</string>
   <string name="Send">Send</string>
   <string name="Total_Fare">Total Fare</string>
   <string name="Final_Fare">Final Fare</string>
   <string name="Cancel_Ride">CANCLE RIDE</string>
   <string name="Driver_List">Choose Driver</string>
   <string name="Card_Number">Card Number</string>
   <string name="CVV">CVV</string>
   <string name="Expire_Date">Expire Date</string>
   <string name="Paymentscreen">Payment screen</string>
   <string name="WaitingCharge">Waiting Charge</string>
   <string name="CancellationCharges">Cancellation Charges</string>
   <string name="FinalAmount">Final Amount</string>
   <string name="Pay">Pay</string>
   <string name="MyProfile">My Profile</string>
   <string name="Mobile">Mobile</string>
   <string name="enter_charcter_6">(Enter 6-8 Character Password)</string>
   <string name="DeleteMyAccount">Delete Your Account?</string>
   <string name="Update">Update</string>
   <string name="Reason">Reason</string>
   <string name="RiderAmountwillbeDebited">Rider Amount will be Debited</string>
   <string name="RideRating">Ride Rating</string>
   <string name="Rating">Rating</string>
   <string name="Comment">Comment</string>
   <string name="Loading">Loading...</string>
    <string name="Search">Search</string>
   <string name="Enter_Location">Enter Location</string>
   <string name="Trip_Detail">Trip Detail</string>
   <string name="Date">Date</string>
   <string name="Time">Time</string>
   <string name="EnterNewPassword">Enter New Password</string>
   <string name="NewPassword">New Password</string>
   <string name="drag">Please drag map to your address..</string>
   <string name="ConfirmPickUpPoint">Confirm PickUp Point</string>
   <string name="Paldi_Ahmedabad">Paldi,Ahmedabad</string>
   <string name="Address">Address:</string>
   <string name="Payment_Amount">Payment Amount</string>
   <string name="Payment_By">Payment By</string>
   <string name="Car_Type">Car Type</string>
   <string name="Trip_Status">Trip Status</string>
    <string name="Trip_no">Trip Number</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="only_loding">L O A D I N G ...</string>
    <string name="mini">Mini</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="dashboard">Dashboard</string>
    <string name="your_trip">Your Trip</string>
    <string name="favourite">Favourite</string>
    <string name="share_app">Share App</string>
    <string name="legal">Legal</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>
