<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgone">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/whole"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".Activity.Login_Activty">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/logolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_200dp"
                    android:layout_height="@dimen/_170dp"
                    android:layout_gravity="center"
                    android:src="@drawable/top_logo" />

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/loginlayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_below="@+id/logolayout"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/yellow">


                <com.taxibookingrider.Controller.TahomaBold
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/EnterNewPassword"
                    android:textColor="#003D4C"
                    android:textSize="@dimen/_18_sp" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/edit22"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_below="@+id/loginlayout"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginRight="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/white_tranparent_dark">

                <EditText
                    android:id="@+id/enterpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/passwordlayout"
                    android:background="@null"
                    android:hint="@string/NewPassword"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:paddingLeft="@dimen/_5dp"
                    android:textStyle="italic" />

                <RelativeLayout
                    android:id="@+id/passwordlayout"
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/blue">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_25dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/otpi2" />


                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit22"
                android:layout_marginRight="@dimen/_50dp">


                <com.taxibookingrider.Controller.TahomaBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/enter_character"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />


            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_below="@+id/hint"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginRight="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/login">


                <com.taxibookingrider.Controller.Tahoma
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Enter"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_18_sp" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_below="@+id/enter"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginRight="@dimen/_50dp"
                android:layout_marginTop="@dimen/_40dp"
                android:background="@color/white_tranparent"
                android:visibility="gone">


                <com.taxibookingrider.Controller.TahomaBold
                    android:id="@+id/forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7_sp"
                    android:gravity="center"
                    android:text="@string/Forgot_password"
                    android:textColor="#063E47"
                    android:textSize="@dimen/_18_sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/loginlayout"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="bottom"
                android:paddingBottom="@dimen/_15dp">

            </RelativeLayout>


        </RelativeLayout>





    </RelativeLayout>
</ScrollView>