<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardElevation="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_40dp"
                    android:layout_height="@dimen/_40dp"
                    android:src="@drawable/language_yellow"
                    android:layout_margin="@dimen/_5dp"/>

               <com.taxibookingrider.Controller.Tahoma
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Choose Langauge"
                   android:textColor="@color/dark_text"
                   android:textSize="@dimen/_18_sp"
                   android:layout_margin="@dimen/_5dp"
                   android:paddingTop="@dimen/_5dp"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color"></View>

        <LinearLayout
            android:id="@+id/ll_l_English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/chk_l_english"
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/not_selected" />


            <com.taxibookingrider.Controller.Tahoma
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:text="@string/English"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_15_sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_l_Arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/chk_l_arabic"
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/not_selected" />


            <com.taxibookingrider.Controller.Tahoma
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:text="@string/Arabic"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_15_sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
           android:layout_gravity="right">

            <com.taxibookingrider.Controller.Tahoma
                android:id="@+id/okbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_7dp"
                android:text="@string/OK"
                android:textColor="@color/dark_text"
                android:textSize="@dimen/_15_sp" />

            <com.taxibookingrider.Controller.Tahoma
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_7dp"
                android:text="@string/Cancel"
                android:textColor="@color/light_text"
                android:textSize="@dimen/_15_sp" />
        </LinearLayout>
    </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>